# python_tdd_project

./: README.md  pyproject.toml  transcript.txt
src/tdd_project/: main.py
tests/: test_main.py
tests/tdd_project/: test_main.py
