[project]
name = "tdd-project"
version = "0.1.0"
description = "A sample python project for TDD"
readme = "README.md"

requires-python = ">=3.13"
dependencies = []

[project.scripts]
main = "tdd_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-watcher>=0.4.3",
    "ruff>=0.8.5"
]